# flutter_live2d_ffi

./: LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  FlutterBridgeC.cpp  FlutterBridgeC.h  LAppLive2DManager.cpp  LAppLive2DManager.hpp  live2d_bridge.cpp  live2d_bridge.h  live2d_renderer.cpp  live2d_renderer.h
android/src/main/java/com/example/flutter_live2d_ffi/: FlutterLive2dFfiPlugin.java
android/src/main/java/com/glitch9/flutter_live2d_ffi/: FlutterLive2dFFIPlugin.java  Live2DNativeBridge.java  Live2DPlatformView.java  Live2DPlatformViewFactory.java  Live2DRenderer.java
android/src/test/java/com/example/flutter_live2d_ffi/: FlutterLive2dFfiPluginTest.java
android/src/test/java/com/glitch9/flutter_live2d_ffi/: FlutterLive2dFfiPluginTest.java
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_live2d_ffi.podspec
ios/Classes/: FlutterLive2dFfiPlugin.h  FlutterLive2dFfiPlugin.m  LAppLive2DManager.h  LAppLive2DManager.mm  Live2DBridge.mm  Live2DPlatformView.h  Live2DPlatformView.m  Live2DPlatformViewFactory.h  Live2DPlatformViewFactory.m  Live2DRenderer.mm
lib/: flutter_live2d_ffi.dart  flutter_live2d_ffi_method_channel.dart  flutter_live2d_ffi_platform_interface.dart  live2d_view.dart
lib/src/: live2d_bridge.dart  live2d_view.dart
test/: flutter_live2d_ffi_method_channel_test.dart  flutter_live2d_ffi_test.dart
(+6 files in other folders)
